--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
-    "express": "^4.21.0"
-
+    "express": "^4.21.0",
+    "cors":"2.8.5"
   }
 }
